# clickx3-pytest

./: .gitignore  README.md  config.ini  conftest.py  pyproject.toml  pytest.ini
apps/via/: __init__.py
clickx3/: __init__.py
clickx3_app/via/: __init__.py
clickx3_pytest/: hooks.py
clickx3_pytest/fixtures/: android_fixture.py
clickx3_pytest/plugins/: android_screenrecord_plugin.py  android_screenshot_plugin.py  web_screenrecord_plugin.py  web_screenshot_plugin.py
conftests/fixtures/: driver_fixture.py  variable_fixture.py
conftests/plugins/: html_plugin.py
demo/apps/: __init__.py
demo/testcases/: __init__.py  chrome_test.py  via_test.py
testcases/: demo_test.py  test_demo.py
