[tool.poetry]
name = "clickx3-pytest"
version = "0.1.0"
description = "ClickX3 Pytest Template"
authors = ["Kelvin.Ye <testmankelvin@163.com>"]
readme = "README.md"

homepage = "https://github.com/YeKelvin/clickx3-pytest-template"
repository = "https://github.com/YeKelvin/clickx3-pytest-template"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
clickx3-toolkit = {path = "../clickx3-toolkit", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-aggreport = "*"
pytest-html = "*"
pytest-order = "*"
pytest-rerunfailures = "*"
pytest-repeat = "*"
pytest-sugar = "*"
# allure-pytest = "*"
# allure-python-commons = "*"
flake8 = "*"
yapf = "*"

[tool.poetry.scripts]

[build-system]
requires = [
    "setuptools>=50.0",
    "poetry>=1.1.5"
]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "google"
line_length = 120
multi_line_output = 3
group_by_package = true
