[tool.poetry]
name = "clickx3-pytest"
version = "0.1.0"
description = "ClickX3 Pytest"
authors = ["Kelvin.Ye <testmankelvin@163.com>"]
readme = "README.md"

homepage = "https://github.com/YeKelvin/clickx3-pytest"
repository = "https://github.com/YeKelvin/clickx3-pytest"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
pytest-aggreport = "*"
pytest-html = "*"
pytest-order = "*"
pytest-rerunfailures = "*"
pytest-repeat = "*"
pytest-sugar = "*"
clickx3-toolkit = {path = "../clickx3-toolkit", develop = true}

[tool.poetry.dev-dependencies]
flake8 = "*"
yapf = "*"
isort = "*"

[tool.poetry.scripts]

[build-system]
requires = [
    "setuptools>=50.0",
    "poetry>=1.1.5"
]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "pycharm"
line_length = 120
force_single_line = true
multi_line_output = 3
